--- a/package.json
+++ b/package.json
@@ -5,16 +5,22 @@
   "dependencies": {
     "@apollo/client": "^3.3.21",
     "@apollo/react-hooks": "^4.0.0",
+    "@emotion/react": "11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.2.2",
     "@reduxjs/toolkit": "^1.6.1",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "@types/react-plotly.js": "^2.5.0",
     "@types/react-redux": "^7.1.5",
     "graphql": "^14.5.8",
     "isomorphic-fetch": "^2.2.1",
+    "plotly.js": "^2.6.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-plotly.js": "^2.5.1",
     "react-toastify": "^5.4.0",
     "react-use": "^17.2.4",
     "rebound": "^0.1.0",
